fix(feat section):set the design to wrap on a smaller screen in the display flex and added a little padding to keep it off the sides

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,8 +1,9 @@
 .feat-hero {
-  width: 150.6rem;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  flex-wrap: wrap;
+  padding: 0 2rem;
 }
 .feat-home-text {
   width: 24.4rem;
